; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-wrapper.c_pulseaudio_context_ready.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/audio-monitoring/pulse/extr_pulseaudio-wrapper.c_pulseaudio_context_ready.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pulseaudio_context = common dso_local global i32 0, align 4
@PA_CONTEXT_READY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @pulseaudio_context_ready to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pulseaudio_context_ready() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @pulseaudio_lock()
  %3 = load i32, i32* @pulseaudio_context, align 4
  %4 = call i64 @pa_context_get_state(i32 %3)
  %5 = call i32 @PA_CONTEXT_IS_GOOD(i64 %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %0
  %8 = call i32 (...) @pulseaudio_unlock()
  store i32 -1, i32* %1, align 4
  br label %19

9:                                                ; preds = %0
  br label %10

10:                                               ; preds = %15, %9
  %11 = load i32, i32* @pulseaudio_context, align 4
  %12 = call i64 @pa_context_get_state(i32 %11)
  %13 = load i64, i64* @PA_CONTEXT_READY, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 (...) @pulseaudio_wait()
  br label %10

17:                                               ; preds = %10
  %18 = call i32 (...) @pulseaudio_unlock()
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %17, %7
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32 @pulseaudio_lock(...) #1

declare dso_local i32 @PA_CONTEXT_IS_GOOD(i64) #1

declare dso_local i64 @pa_context_get_state(i32) #1

declare dso_local i32 @pulseaudio_unlock(...) #1

declare dso_local i32 @pulseaudio_wait(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
